create develop branch

--- a/index.html
+++ b/index.html
@@ -11,10 +11,19 @@
 
 <body>
     
+    <header>
+
+    </heder>
+
+    <main>
 
 
+    </main>
 
 
+    <footer>
+        
+    </footer>
 
     <script src="./assets/js/script.js"></script>
 </body>
