--- a/index.html
+++ b/index.html
@@ -12,11 +12,122 @@
 <body>
     
     <header>
+        <h1>Welcome to Coding Quiz!</h1>
+        <div class="buttons">
+            <button>start</button>
+        </div>
+    </header>
 
-    </heder>
-
+    <!--store the question in the main section of the body-->
     <main>
+        <!--assign class="questions" for all the question to style them together and manipulate how they appear in JavaScript-->
+       <section class="questions">
+        <h2>Question 1. Commonly used data types do NOT include: </h2>
+        <!--assign the class to each question's answer selection individually to highlight wrong/correct answer in a different color-->
+        <ol class="question1">
+            <li>strings</li>
+            <li>booleans</li>
+            <li>alerts</li> 
+            <li>numbers</li>
+        </ol>
 
+        <!--place the containers with "correct"/"wrong" at the bottom of the question and give them class name hidden. if the user clicks on the correct/wrong answer the text will become visible-->
+        <div class="correct">
+            <h3>CORRECT &#128512;</h3>
+        </div>
+        <div class="wrong">
+            <h3>WRONG &#128533;</h3>
+        </div>
+
+        <!--wrap the buttons in a div element for styling and to tie the events to them in JavaScript-->
+        <div class="buttons">
+            <button>next</button>
+        </div>
+       </section>
+
+       <section class="questions">
+        <h2>Question 2. A very useful tool used during development and debugging for printing contene to the debugger is: </h2>
+        <ol class="question2">
+            <li>JavaScript</li>
+            <li>terminal/bash</li>
+            <li>for loops</li>
+            <li>console.log</li>
+        </ol>
+
+        <div class="correct">
+            <h3>CORRECT &#128512;</h3>
+        </div>
+        <div class="wrong">
+            <h3>WRONG &#128533;</h3>
+        </div>
+
+        <div class="button">
+            <button>next</button>
+        </div>
+       </section>
+
+       <section class="questions">
+        <h2>Question 3. String values must be enclosed within ___ when being assigned to variables.</h2>
+        <ol class="question3">
+            <li>commas</li>
+            <li>curly brackets</li>
+            <li>quotes</li>
+            <li>parentheses</li>
+        </ol>
+
+        <div class="correct">
+            <h3>CORRECT &#128512;</h3>
+        </div>
+        <div class="wrong">
+            <h3>WRONG &#128533;</h3>
+        </div>
+
+        <div class="buttons">
+            <button>next</button>
+        </div>
+       </section>
+
+       <section class="questions">
+        <h2>Question 4. Arrays in JavaScript can be used to store:</h2>
+        <ol class="question4">
+            <li>numbers and strings</li>
+            <li>other arrays</li>
+            <li>booleans</li>
+            <li>all of the above</li>
+        </ol>
+
+        <div class="correct">
+            <h3>CORRECT &#128512;</h3>
+        </div>
+        <div class="wrong">
+            <h3>WRONG &#128533;</h3>
+        </div>
+
+        <div class="buttons">
+            <button>next</button>
+        </div>
+       </section>
+
+       <section class="questions">
+        <h2>Question 5. The condition in an if / else statement is enclosed with: </h2>
+        <ol class="question5">
+            <li>quotes</li>
+            <li>curly brackets</li>
+            <li>parentheses</li>
+            <li>square brackets</li>
+        </ol>
+
+        <div class="correct">
+            <h3>CORRECT &#128512;</h3>
+        </div>
+        <div class="wrong">
+            <h3>WRONG &#128533;</h3>
+        </div>
+
+        <div class="buttons">
+            <button>next</button>
+        </div>
+       </section>
 
     </main>
 
