fixed the links to stylecss and script

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coding Quiz</title>
-    <link rel="stylesheet" href="./test.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
@@ -70,6 +70,6 @@
 
     <footer></footer>
 
-    <script src="./testJS.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
